--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,88 @@ additional_arches: [ppc64le]
 source_config:
   url: https://github.com/openshift/os
 
+artifacts:
+  x86_64:
+    "4.6":
+      bootimages:
+        - AWS
+        - Azure
+        - Installer
+        - Metal
+        - OpenStack
+        - VMware
+        - GCP
+    "4.7":
+      bootimages:
+        - AWS
+        - Azure
+        - IBMCloud
+        - Installer
+        - Metal
+        - OpenStack
+        - VMware
+        - GCP
+    "4.8":
+      bootimages:
+        - AWS
+        - Azure
+        - IBMCloud
+        - Installer
+        - Metal
+        - OpenStack
+        - VMware
+        - GCP
+    "4.9":
+      bootimages:
+        - AWS
+        - Azure
+        - AzureStack
+        - IBMCloud
+        - Installer
+        - Metal
+        - OpenStack
+        - VMware
+        - GCP
+    "4.10":
+      bootimages:
+        - Aliyun
+        - AWS
+        - Azure
+        - AzureStack
+        - IBMCloud
+        - Installer
+        - Metal
+        - Nutanix
+        - OpenStack
+        - VMware
+        - GCP
+    "4.11":
+      bootimages:
+        - Aliyun
+        - AWS
+        - Azure
+        - AzureStack
+        - IBMCloud
+        - Installer
+        - Metal
+        - Nutanix
+        - OpenStack
+        - VMware
+        - GCP
+    master:
+      bootimages:
+        - Aliyun
+        - AWS
+        - Azure
+        - AzureStack
+        - IBMCloud
+        - Installer
+        - Metal
+        - Nutanix
+        - OpenStack
+        - VMware
+        - GCP
+
 # remove to disable S3 uploads
 # s3_bucket: rhcos-ci
 # path: releases/4.11-devel
