jobs/build: define a memory resource limit

--- a/manifests/pod.yaml
+++ b/manifests/pod.yaml
@@ -70,6 +70,7 @@ spec:
        limits:
          devices.kubevirt.io/kvm: '1'
          cpu: COREOS_ASSEMBLER_CPU_LIMIT
+         memory: COREOS_ASSEMBLER_MEMORY_LIMIT
   volumes:
   - name: srv
     emptyDir: {}
